--- a/plugins/Live/lang/el.json
+++ b/plugins/Live/lang/el.json
@@ -31,11 +31,13 @@
         "ActionsAndDuration": "%1$s ενέργειες σε %2$s",
         "SimpleRealTimeWidget_Message": "%1$s και %2$s στα τελευταία %3$s",
         "ViewVisitorProfile": "Εμφάνιση του προφίλ επισκέπτη",
+        "EnableVisitorProfile": "Ενεργοποίηση προφίλ επισκεπτών",
         "VisitedPages": "Σελίδες που έχουν επισκεφθεί",
         "RevisitedPages": "Σελίδες που αναγνώστηκαν παραπάνω από μία φορές",
         "ToggleActions": "Εναλλαγή της ορατότητας όλων των ενεργειών",
         "TopVisitedPages": "Κορυφαίες σε επισκεψιμότητα σελίδες",
         "VisitsLog": "Ημερολόγιο Επισκέψεων",
+        "EnableVisitsLog": "Ενεργοποίηση ημερολογίου επισκεπτών",
         "QueryMaxExecutionTimeExceeded": "Το ερώτημα πήρε υπερβολικά πολύ χρόνο να εκτελεστεί.",
         "QueryMaxExecutionTimeExceededReasonDateRange": "Αυτό ενδέχεται να συμβεί αν το επιλεγμένο εύρος ημερομηνιών είναι πολύ μεγάλο. Παρακαλούμε επιλέξτε ένα μικρότερο εύρος ημερομηνιών.",
         "QueryMaxExecutionTimeExceededReasonSegment": "Αυτό ενδέχεται να συμβεί αν το επιλεγμένο τμήμα δεν βρίσκει κάποια επίσκεψη. Παρακαλούμε ελέγξτε το επιλεγμένο τμήμα.",
