--- a/plugins/Live/lang/sq.json
+++ b/plugins/Live/lang/sq.json
@@ -31,11 +31,13 @@
         "ActionsAndDuration": "%1$s veprime në %2$s",
         "SimpleRealTimeWidget_Message": "%1$s dhe %2$s në %3$s e fundit",
         "ViewVisitorProfile": "Shini profilin e vizitorit",
+        "EnableVisitorProfile": "Aktivizo profil vizitori",
         "VisitedPages": "Faqe të vizituara",
         "RevisitedPages": "Faqe të para më shumë se një herë",
         "ToggleActions": "Aktivizo\/çaktivizo dukshmërinë e krejt veprimeve",
         "TopVisitedPages": "Faqet kryesuese të vizituara",
         "VisitsLog": "Regjistër Vizitash",
+        "EnableVisitsLog": "Aktivizo regjistër vizitash",
         "QueryMaxExecutionTimeExceeded": "Ekzekutimi i kërkesës zgjati shumë.",
         "QueryMaxExecutionTimeExceededReasonDateRange": "Kjo mund të ndodhë nëse intervali i përzgjedhur i datave është shumë i madh. Ju lutemi, provoni të përzgjidhni një interval më të vogël të dhënash.",
         "QueryMaxExecutionTimeExceededReasonSegment": "Kjo mund të ndodhë nëse me intervalin e përzgjedhur s’ka përputhje ndonjë vizitë. Ju lutemi, provoni të kontrolloni intervalin tuaj të përzgjedhur.",
