--- a/plugins/Live/lang/tr.json
+++ b/plugins/Live/lang/tr.json
@@ -31,11 +31,13 @@
         "ActionsAndDuration": "%1$s işlem %2$s içinde",
         "SimpleRealTimeWidget_Message": "Son %3$s içinde %1$s ve %2$s",
         "ViewVisitorProfile": "Ziyaretçi profilini görüntüle",
+        "EnableVisitorProfile": "Ziyaretçi profili kullanılsın",
         "VisitedPages": "Ziyaret edilmiş sayfalar",
         "RevisitedPages": "Birden çok kez görüntülenen sayfalar",
         "ToggleActions": "Tüm işlemlerin görünürlüğünü değiştir",
         "TopVisitedPages": "En çok ziyaret edilen sayfalar",
         "VisitsLog": "Ziyaret Kayıtları",
+        "EnableVisitsLog": "Ziyaretçi günlüğü kullanılsın",
         "QueryMaxExecutionTimeExceeded": "Sorgu işleminin tamamlanması çok uzun sürdü.",
         "QueryMaxExecutionTimeExceededReasonDateRange": "Bu sorun seçilmiş tarih aralığı çok büyük olduğunda çıkabilir. Lütfen daha küçük bir tarih aralığı seçmeyi deneyin.",
         "QueryMaxExecutionTimeExceededReasonSegment": "Bu sorun seçilmiş dilimde herhangi bir ziyaret yoksa çıkabilir. Lütfen seçtiğiniz dilimi denetlemeyi deneyin.",
