--- a/plugins/Live/lang/zh-cn.json
+++ b/plugins/Live/lang/zh-cn.json
@@ -31,11 +31,13 @@
         "ActionsAndDuration": "%2$s中的%1$s个动作",
         "SimpleRealTimeWidget_Message": "%1$s 和 %2$s 在最近 %3$s。",
         "ViewVisitorProfile": "查看访客资料",
+        "EnableVisitorProfile": "启用访客资料",
         "VisitedPages": "访问的页面",
         "RevisitedPages": "被浏览超过一次的页面",
         "ToggleActions": "切换所有动作的可见性",
         "TopVisitedPages": "热门访问页面",
         "VisitsLog": "访问日志",
+        "EnableVisitsLog": "启用访客日志",
         "QueryMaxExecutionTimeExceeded": "该查询花费很长时间才能执行。",
         "QueryMaxExecutionTimeExceededReasonDateRange": "如果选择的日期范围太大，可能会发生这种情况。 请尝试选择较小的日期范围。",
         "QueryMaxExecutionTimeExceededReasonSegment": "如果所选的部分与任何访问都不匹配，则可能发生这种情况。 请尝试检查您选择的部分。",
