--- a/plugins/PrivacyManager/lang/en.json
+++ b/plugins/PrivacyManager/lang/en.json
@@ -85,7 +85,8 @@
         "EstimatedSpaceSaved": "Estimated space saved",
         "ForceCookielessTracking": "Force tracking without cookies",
         "ForceCookielessTrackingDescription": "Enabling this option will automatically update %1$s, so it contains some additional code to ensure all trackers won't use cookies. Additionally Matomo will ignore all tracking cookies on server side.",
-        "ForceCookielessTrackingDescriptionNotWritable": "Your %1$s is not writable. Therefor it can't be updated, to ensure cookies won't be used. Please make the file writable or ensure to call disableCookies manually for all javascript trackers. Otherwise Matomo will only ignore all tracking cookies on server side.",
+        "ForceCookielessTrackingDescription2": "Cookies will be disabled even when using the consent methods in Matomo tracker and calling for example the cookie consent methods won't enable cookies.",
+        "ForceCookielessTrackingDescriptionNotWritable": "The JS tracker file \"%1$s\" is not writable which is required for this feature to fully work. When the JS tracker file is not writable, then the cookies will be only ignored on the server side but cookies might be still set in the browser. To solve this issue you or a system administrator need to change the file permissions so your webserver can change this file.",
         "GeolocationAnonymizeIpNote": "Note: Geolocation will have approximately the same results with 1 byte anonymized. With 2 bytes or more, Geolocation will be inaccurate.",
         "GDPR": "GDPR",
         "GdprManager": "GDPR Manager",
