Adds possibility to force cookie less tracking (#16592)
* Add system and measurable setting to enable cookie less tracking

* Never return a visitor id if cookieless tracking is forced

* Adds custom tracker.js to prevent cookies

* ignore exceptions

* cache setting in site attributes for faster tracking

* updates expected test files

* ensure getVisitorId also works without idSite in request

* fix js tests

* store global cookie flag in config to avoid failures when building tracker js

* use config instead of systemsetting

* use a new event to update the tracker file

* Fix handling in Request::getVisitorId()

* improve setting descriptions

* Revert "use config instead of systemsetting"

This reverts commit 1fdfb6808415d2984726cedfe2644de31086f927.

* Revert "store global cookie flag in config to avoid failures when building tracker js"

This reverts commit 2587dbb851d3e44f2740e39c91af3213930cad6f.

* code improvements

* Reset storage to ensure it's not filled with invalid database objects

* updates expected test files

* Remove measurable setting again

* move setting from systemsettings to ip anonymization settings

* Show a warning if tracker file is not writable

* updates expected test file

* apply some review feedback

* fix test

* updates expected screenshot

* apply review feedback

* submodule update

--- a/plugins/PrivacyManager/lang/en.json
+++ b/plugins/PrivacyManager/lang/en.json
@@ -83,6 +83,10 @@
         "DoNotTrack_SupportDNTPreference": "Support Do Not Track preference",
         "EstimatedDBSizeAfterPurge": "Estimated database size after purge",
         "EstimatedSpaceSaved": "Estimated space saved",
+        "ForceCookielessTracking": "Force tracking without cookies",
+        "ForceCookielessTrackingDescription": "Enabling this option will automatically update %1$s, so it contains some additional code to ensure all trackers won't use cookies. Additionally Matomo will ignore all tracking cookies on server side.",
+        "ForceCookielessTrackingDescription2": "Cookies will be disabled even when using the consent methods in Matomo tracker and calling for example the cookie consent methods won't enable cookies.",
+        "ForceCookielessTrackingDescriptionNotWritable": "The JS tracker file \"%1$s\" is not writable which is required for this feature to fully work. When the JS tracker file is not writable, then the cookies will be only ignored on the server side but cookies might be still set in the browser. To solve this issue you or a system administrator need to change the file permissions so your webserver can change this file.",
         "GeolocationAnonymizeIpNote": "Note: Geolocation will have approximately the same results with 1 byte anonymized. With 2 bytes or more, Geolocation will be inaccurate.",
         "GDPR": "GDPR",
         "GdprManager": "GDPR Manager",
