--- a/plugins/Live/lang/en.json
+++ b/plugins/Live/lang/en.json
@@ -31,13 +31,15 @@
         "ActionsAndDuration": "%1$s actions in %2$s",
         "SimpleRealTimeWidget_Message": "%1$s and %2$s in the last %3$s",
         "ViewVisitorProfile": "View visitor profile",
-        "EnableVisitorProfile": "Enable visitor profile",
+        "DisableVisitorProfile": "Disable visitor profile only",
+        "DisableVisitorProfileDescription": "Here you can disable the visitor profile feature. All visits log related features will remain working.",
         "VisitedPages": "Visited pages",
         "RevisitedPages": "Pages viewed more than once",
         "ToggleActions": "Toggle visibility of all actions",
         "TopVisitedPages": "Top visited pages",
         "VisitsLog": "Visits Log",
-        "EnableVisitsLog": "Enable visits log",
+        "DisableVisitsLogAndProfile": "Disable visits log & visitor profile",
+        "DisableVisitsLogAndProfileDescription": "Here you can disable the visits log and visitor profile feature. This will also disable features that depend on such like the ecommerce log, the segmented visits log, the realtime map or the realtime widget. This might be required to comply with your local privacy laws/guidelines.",
         "QueryMaxExecutionTimeExceeded": "The query took too long to execute.",
         "QueryMaxExecutionTimeExceededReasonDateRange": "This can happen if the selected date range is too large. Please try to select a smaller date range.",
         "QueryMaxExecutionTimeExceededReasonSegment": "This can happen if the selected segment doesn't match any visit. Please try to check your selected segment.",
