--- a/plugins/Widgetize/lang/en.json
+++ b/plugins/Widgetize/lang/en.json
@@ -4,6 +4,6 @@
         "PluginDescription": "Display any Matomo report in your website or app with a simple Embed HTML tag.",
         "ViewAccessRequired": "This user has at least some write access. Only tokens of users who have only view access can be used. See %1$s for more information.",
         "TopLinkTooltip": "Export Matomo Reports as Widgets and embed the Dashboard in your app as an iframe.",
-        "TooHighAccessLevel": "This user has too much access for embedding widgets. Please use a user less access."
+        "TooHighAccessLevel": "This user has super user access. For embedding widgets super user token auths are not allowed. %1$sSee our faq for more information.%2$s"
     }
 }
