--- a/plugins/Installation/lang/en.json
+++ b/plugins/Installation/lang/en.json
@@ -132,6 +132,7 @@
         "SystemCheckWriteDirsHelp": "To fix this error on your GNU\/Linux system, try typing in the following command(s)",
         "SystemCheckZlibHelp": "You need to configure and rebuild PHP with \"zlib\" support enabled, --with-zlib.",
         "SystemCheckCronArchiveProcess": "Setup Cron",
+        "FasterReportLoading": " faster report loading",
         "SystemCheckCronArchiveProcessCLI": "Managing processes via CLI",
         "SystemCheckPhpSetting": "To prevent some critical issue, you must set the following in your php.ini file: %s",
         "SystemCheckUpdateHttps": "Update over HTTPS",
