--- a/plugins/PrivacyManager/lang/el.json
+++ b/plugins/PrivacyManager/lang/el.json
@@ -83,6 +83,10 @@
         "DoNotTrack_SupportDNTPreference": "Υποστήριξη επιλογής Μη Καταγραφής",
         "EstimatedDBSizeAfterPurge": "Εκτιμώμενο μέγεθος βάσης δεδομένων μετά την εκκαθάριση",
         "EstimatedSpaceSaved": "Εκτιμώμενος χώρος που εξοικονομήθηκε",
+        "ForceCookielessTracking": "Να γίνεται ιχνηλάτηση χωρίς cookies",
+        "ForceCookielessTrackingDescription": "Η ενεργοποίηση της επιλογής θα ενημερώνει αυτόματα το %1$s, οπότε περιέχει επιπλέον κώδικα προκειμένου όλοι οι ιχνηλάτες να μην χρησιμοποιούν cookies. Επιπρόσθετα, το Matomo θα αγνοεί όλα τα cookies ιχνηλάτησης από την πλευρά του διακομιστή.",
+        "ForceCookielessTrackingDescription2": "Τα cookies θα είναι ανενεργά ακόμη και όταν χρησιμοποιούνται οι μέθοδοι συναίνεσης στον ιχνηλάτη του Matomo και όταν για παράδειγμα καλούνται οι μέθοδοι συναίνεσης με cookies δε θα χρησιμοποιούνται cookies.",
+        "ForceCookielessTrackingDescriptionNotWritable": "Το αρχείο ιχνηλάτησης JS \"%1$s\" δεν είναι εγγράψιμο, κάτι που απαιτείται προκειμένου το χαρακτηριστικό αυτό να δουλέψει. Όταν το αρχείο ιχνηλάτησης JS δεν είναι εγγράψιμο, τότε τα cookies θα αγνοούνται στην πλευρά του διακομιστή, ωστόσο ενδέχεται να ορίζονται από το πρόγραμμα φυλλομέτρησης. Για να λύσετε αυτό το θέμα, πρέπει εσείς ή ο διαχειριστής συστήματος να αλλάξετε τα δικαιώματα του αρχείου ώστε ο διακομιστής ιστού να μπορεί να τροποποιεί το αρχείο.",
         "GeolocationAnonymizeIpNote": "Σημείωση: Η Γεωτοποθεσία θα έχει περίπου τα ίδια αποτελέσματα με 1 byte ανώνυμο. Με 2 bytes ή περισσότερο, η Γεωτοποθεσία θα είναι ανακριβής.",
         "GDPR": "GDPR",
         "GdprManager": "Διαχειριστής GDPR",
