--- a/plugins/Login/lang/fr.json
+++ b/plugins/Login/lang/fr.json
@@ -16,6 +16,7 @@
         "SettingBruteForceEnableHelp": "La détection de Force Brute est une fonctionnalité de sécurité importante utilisée pour protéger vos données contre tout accès non autorisé. Au lieu de permettre à n'importe quel utilisateur d'essayer des milliers, ou des millions de combinaisons de mots de passe dans un temps très court, il ne permettra qu'un nombre spécifique de connexions échouées dans un court laps de temps. Si trop de connexions échouées se produisent dans cet intervalle de temps, l'utilisateur ne pourra pas se connecter pendant un certain temps. Veuillez noter que si une adresse IP est bloquée, tous les utilisateurs qui utilisent cette adresse IP seront également bloqués.",
         "SettingBruteForceWhitelistIp": "Ne jamais empêcher ces IP d'ouvrir une session",
         "SettingBruteForceBlacklistIp": "Toujours empêcher ces IPS de se connecter",
+        "NotAllowListTakesPrecendence": "Si une IP est à la fois dans la liste «empêcher» et «ne jamais empêcher», c'est la liste «empêcher» qui prend le dessus et l'IP ne sera pas autorisée.",
         "SettingBruteForceMaxFailedLogins": "Nombre de tentatives d'ouverture de session autorisées sur une période donnée",
         "SettingBruteForceMaxFailedLoginsHelp": "Au delà de ce nombre de tentatives échouées de connexion dans l'intervalle de temps configuré ci-dessous, bloquez l'IP.",
         "SettingBruteForceTimeRange": "Compter les tentatives d'ouverture de session dans cette intervalle de temps en minute",
