several changes to emphasize setup and use of auto-archiving rather than real-time processing (#16603)
* several changes to emphasize setup and use of auto-archiving rather than real-time processing

* apply some pr feedback

* Applying more pr feedback.

* apply review fixes

* ignore ability to archive segments in real time

* another tweak

* update tests

* fix another test

* fix ui tests

* update test

* fix evolution icon bug

* Update TreemapVisualization and update expected screenshots

* update screenshots

--- a/plugins/CoreHome/lang/en.json
+++ b/plugins/CoreHome/lang/en.json
@@ -82,7 +82,8 @@
         "PivotBySubtable": "This report is not pivoted %1$s Pivot by %2$s",
         "SystemSummaryWidget": "System Summary",
         "SystemSummaryNWebsites": "%d websites",
-        "SystemSummaryNSegments": "%d segments",
+        "SystemSummaryNSegments": "%1$d segments",
+        "SystemSummaryNSegmentsWithBreakdown": "%1$d segments (%2$s pre-processed, %3$s processed in real-time)",
         "SystemSummaryNActivatedPlugins": "%d activated plugins",
         "SystemSummaryPiwikVersion": "Matomo version",
         "SystemSummaryMysqlVersion": "MySQL version",
