--- a/plugins/CoreHome/lang/el.json
+++ b/plugins/CoreHome/lang/el.json
@@ -82,7 +82,8 @@
         "PivotBySubtable": "Η αναφορά αυτή δεν στηρίζεται %1$s Pivot από %2$s",
         "SystemSummaryWidget": "Περίληψη συστήματος",
         "SystemSummaryNWebsites": "%d ιστοτόποι",
-        "SystemSummaryNSegments": "%d τμήματα",
+        "SystemSummaryNSegments": "%1$d τμήματα",
+        "SystemSummaryNSegmentsWithBreakdown": "%1$d τμήματα (%2$s σε προ-επεξεργασία, %3$s σε επεξεργασία σε πραγματικό χρόνο)",
         "SystemSummaryNActivatedPlugins": "%d ενεργά πρόσθετα",
         "SystemSummaryPiwikVersion": "Έκδοση του Matomo",
         "SystemSummaryMysqlVersion": "Έκδοση της MySQL",
