--- a/plugins/CoreHome/lang/sq.json
+++ b/plugins/CoreHome/lang/sq.json
@@ -82,7 +82,8 @@
         "PivotBySubtable": "Ky raport s’është rrotulluar %1$s Rrotullojeni sipas %2$s",
         "SystemSummaryWidget": "Përmbledhje Sistemi",
         "SystemSummaryNWebsites": "%d sajte",
-        "SystemSummaryNSegments": "%d segmente",
+        "SystemSummaryNSegments": "%1$d segmente",
+        "SystemSummaryNSegmentsWithBreakdown": "%1$d segmente (%2$s të parapërpunuar, %3$s të përpunuar aty për aty)",
         "SystemSummaryNActivatedPlugins": "%d shtojca të aktivizuara",
         "SystemSummaryPiwikVersion": "Version Matomo",
         "SystemSummaryMysqlVersion": "Version MySQL-je",
