--- a/plugins/CoreHome/lang/de.json
+++ b/plugins/CoreHome/lang/de.json
@@ -23,6 +23,7 @@
         "EndShortcut": "Ende",
         "EnterZenMode": "\"Zen mode\" aktivieren (Menü verstecken)",
         "ExitZenMode": "\"Zen mode\" verlassen (Menü zeigen)",
+        "ExceptionNotAllowlistedIP": "Sie können diese Matomo Installation nicht verwenden weil Ihre IP Adresse %s nicht erlaubt ist.",
         "ExcludeRowsWithLowPopulation": "Alle Zeilen werden angezeigt %s Niedrige Werte ausschließen",
         "ExternalHelp": "Hilfe (öffnet in neuem Tab)",
         "FlattenDataTable": "Der Bericht ist hierarchisch strukturiert %s Flach anzeigen",
@@ -81,7 +82,6 @@
         "PivotBySubtable": "Kein Pivot erstellt für diesen Bericht %1$s Pivot erstellen mit %2$s",
         "SystemSummaryWidget": "Systemzusammenfassung",
         "SystemSummaryNWebsites": "%d Websites",
-        "SystemSummaryNSegments": "%d Segmente",
         "SystemSummaryNActivatedPlugins": "%d aktivierte Plugins",
         "SystemSummaryPiwikVersion": "Matomo-Version",
         "SystemSummaryMysqlVersion": "MySQL-Version",
