--- a/plugins/Installation/lang/de.json
+++ b/plugins/Installation/lang/de.json
@@ -95,6 +95,7 @@
         "SystemCheckGzuncompressHelp": "Sie müssen die zlib Erweiterung und die gzuncompress Funktion aktivieren.",
         "SystemCheckHashHelp": "Sie müssen PHP mit der hash() Funktionalität kompilieren, indem Sie die Option --disable-hash entfernen.",
         "SystemCheckIconvHelp": "Sie müssen PHP mit \"iconv\" Unterstützung konfigurieren und neu bauen ( --with-iconv).",
+        "SystemCheckJsonHelp": "Die php-json Erweiterung wird von Matomo benötigt, um JSON Daten zu lesen und zu schreiben.",
         "SystemCheckMailHelp": "Feedback und Nachrichten zu verlorenen Passwörtern können nicht ohne mail() versendet werden.",
         "SystemCheckMbstring": "mbstring",
         "SystemCheckMbstringHelp": "Die mbstring-Erweiterung wird benötigt, um multibyte-Zeichen in der Benutzeroberfläche und in den API-Antworten zu verarbeiten. Bitte überprüfen Sie ebenfalls, ob mbstring.func_overload in der php.ini auf \"0\" gesetzt ist.",
@@ -130,7 +131,6 @@
         "SystemCheckWriteDirs": "Verzeichnisse mit Schreibzugriff",
         "SystemCheckWriteDirsHelp": "Um diesen Fehler im Linux-System zu beheben, versuchen Sie den\/die folgenden Befehl(e) einzugeben",
         "SystemCheckZlibHelp": "Sie müssen PHP mit \"zlib\" Unterstützung konfigurieren und neu übersetzen ( --with-zlib).",
-        "SystemCheckCronArchiveProcess": "Archiv Cron",
         "SystemCheckCronArchiveProcessCLI": "Prozesse via CLI steuern",
         "SystemCheckPhpSetting": "Um schwerwiegende Probleme zu verhindern, sollten Sie Folgendes in Ihrer php.ini setzen: %s",
         "SystemCheckUpdateHttps": "Update über HTTPS",
