--- a/plugins/Actions/lang/el.json
+++ b/plugins/Actions/lang/el.json
@@ -78,6 +78,7 @@
         "WidgetSearchNoResultKeywords": "Λέξεις-κλειδιά Χωρίς Αποτελέσματα",
         "ActionType": "Τύπος Ενέργειας",
         "ActionTypes": "Τύποι ενεργειών",
-        "Behaviour": "Συμπεριφορά"
+        "Behaviour": "Συμπεριφορά",
+        "TimeSpentInReferringAction": "Χρόνος που δαπανήθηκε σε Ενέργεια Αναφορών"
     }
 }
