--- a/plugins/Referrers/lang/el.json
+++ b/plugins/Referrers/lang/el.json
@@ -14,6 +14,10 @@
         "CampaignContentHelp": "Η παράμετρος χρησιμοποιείται συχνά όταν δοκιμάζετε πολλές διαφημίσεις και θέλετε να συμπεριλάβετε το όνομα κάθε διαφήμισης που ήταν πιο αποτελεσματική στην δημιουργία κίνησης.",
         "CampaignMedium": "Μέσο Καμπάνιας",
         "CampaignMediumHelp": "Χρησιμοποιείται για την περιγραφή της δραστηριότητας της καμπάνιας, για παράδειγμα 'PPC' για τις καμπάνιες με πληρωμή ανά κλικ ή 'SEM' για τις διαφημίσεις επί πληρωμή, ή 'review' για την παρακολούθηση κριτικών προϊόντος για ένα συνεργαζόμενο ιστοτόπο.",
+        "CampaignGroup": "Ομάδα Καμπάνιας",
+        "CampaignGroupHelp": "Η παράμετρος χρησιμοποιείται για την ιχνηλάτηση μιας Ομάδας Καμπάνιας για την αναγνώριση μιας ομάδας ή κοινού. Οι ομάδες καμπάνιας είναι χρήσιμες για την ιχνηλάτηση της συνολικής απόδοσης πολλαπλών καμπανιών με παρόμοιους στόχους.",
+        "CampaignPlacement": "Τοποθέτηση Καμπάνιας",
+        "CampaignPlacementHelp": "Χρησιμοποιείται για να περιγράψει την τοποθέτηση ή θέση μιας διαφήμισης, για παράδειγμα σε ένα ολόκληρο ιστοτόπο, σε συγκεκριμένες σελίδες του ιστοτόπου, μια καθορισμένη μονάδα διαφήμισης τοποθετημένη σε μια μοναδική σελίδα, βίντεο, εφαρμογή για κινητά και άλλα.",
         "ColumnSearchEngine": "Μηχανή Αναζήτησης",
         "ColumnSocial": "Κοινωνικό δίκτυο",
         "ColumnWebsite": "Ιστοσελίδα",
