--- a/plugins/Referrers/lang/tr.json
+++ b/plugins/Referrers/lang/tr.json
@@ -15,7 +15,9 @@
         "CampaignMedium": "Kampanya Ortamı",
         "CampaignMediumHelp": "Pazarlama etkinliğini belirtmek için kullanılır. Örnek: tıklama başına ödeme için 'TBÖ', arama motoru ödemeleri için 'AMÖ' ya da iş ortağının sitesindeki ürün yorumları için 'değerlendirme'.",
         "CampaignGroup": "Kampanya Grubu",
+        "CampaignGroupHelp": "Bu parametre, bir grubu ya da hedef kitleyi tanımlayacak bir Kampanya Grubunu izlemek için kullanılır. Kampanya grupları, benzer hedeflere sahip birden çok kampanyanın genel başarımını izlemek için yararlıdır.",
         "CampaignPlacement": "Kampanya Konumlandırması",
+        "CampaignPlacementHelp": "Reklam yerleşimi ya da konumunu belirtmek için kullanılır. Bir web sitesinin tamamı, bir web sitesindeki belirli sayfalar, tek bir sayfada konumlandırılmış tek bir reklam birimi, bir görüntü, bir cep telefonu uygulaması gibi diğer seçenekler olabilir.",
         "ColumnSearchEngine": "Arama Motoru",
         "ColumnSocial": "Sosyal ağ",
         "ColumnWebsite": "Web sitesi",
