--- a/plugins/Referrers/lang/en.json
+++ b/plugins/Referrers/lang/en.json
@@ -18,6 +18,8 @@
         "CampaignGroupHelp": "This parameter is used to track a Campaign Group to identify a group or audience. Campaign groups are helpful for tracking the overall performance of multiple campaigns with similar goals.",
         "CampaignPlacement": "Campaign Placement",
         "CampaignPlacementHelp": "Used to describe the advertising placement or position, for example an entire website, specific pages from a website, an individual ad unit positioned on a single page, a video, a mobile phone app, and more.",
+        "CampaignId": "Campaign ID",
+        "CampaignIdHelp": "This parameter is used to track a Campaign ID: an identifier which can be a number or any string of data up to 100 characters.",
         "ColumnSearchEngine": "Search Engine",
         "ColumnSocial": "Social network",
         "ColumnWebsite": "Website",
