--- a/plugins/Referrers/lang/en.json
+++ b/plugins/Referrers/lang/en.json
@@ -42,6 +42,7 @@
         "ReferrerNames": "Referrer Names",
         "Referrers": "Referrers",
         "ReferrersOverview": "Referrers Overview",
+        "ReferrersOverviewDocumentation": "This report gives you an overview over the channel types that brought visitors to your website.",
         "ReferrerTypes": "Channel Types",
         "ReferrerURLs": "Referrer URLs",
         "SearchEngines": "Search Engines",
