--- a/plugins/MultiSites/lang/en.json
+++ b/plugins/MultiSites/lang/en.json
@@ -3,6 +3,8 @@
         "Evolution": "Evolution",
         "LoadingWebsites": "Loading websites",
         "PluginDescription": "View and compare all your websites and apps in this useful 'All Websites' dashboard. ",
-        "TopLinkTooltip": "Compare Web Analytics stats for all of your Websites."
+        "TopLinkTooltip": "Compare Web Analytics stats for all of your Websites.",
+        "SingleWebsitesDashboardDocumentation": "This report gives you an overview for a specific website, containing the most important metrics.",
+        "AllWebsitesDashboardDocumentation": "This report gives you an overview over all tracked websites, containing the most important metrics."
     }
 }
