--- a/plugins/UserId/lang/en.json
+++ b/plugins/UserId/lang/en.json
@@ -2,6 +2,7 @@
     "UserId": {
         "UserId": "UserId",
         "UserReportTitle": "User IDs",
+        "UserReportDocumentation": "This report shows the most common metrics group by User IDs.",
         "PluginDescription": "Shows user reports"
     }
 }
