Adds documentation to Event reports

--- a/plugins/Events/lang/en.json
+++ b/plugins/Events/lang/en.json
@@ -8,10 +8,13 @@
         "Event": "Event",
         "EventAction": "Event Action",
         "EventActions": "Event Actions",
+        "EventActionsReportDocumentation": "This report shows you the actions that were tracked for any event. You can view the event categories and names that were tracked along with an event action in each rows subtable",
         "EventCategories": "Event Categories",
+        "EventCategoriesReportDocumentation": "This report shows you the categories that were tracked for any event. You can view the event actions and names that were tracked along with an event category in each rows subtable",
         "EventCategory": "Event Category",
         "EventName": "Event Name",
         "EventNames": "Event Names",
+        "EventNamesReportDocumentation": "This report shows you the names that were tracked for any event. You can view the event actions and categories that were tracked along with an event name in each rows subtable",
         "EventUrl": "Event URL",
         "EventUrls": "Event URLs",
         "Events": "Events",
